# llm-extract-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/llm_extract/: __init__.py
tests/: test_extract.py
