[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-extract-py"
description = "Extract structured data from LLM output: JSON, code blocks, lists, booleans"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_extract = ["py.typed"]
